--- a/templates/watch_variant.html
+++ b/templates/watch_variant.html
@@ -7,10 +7,15 @@
 {% block script %}
 {% endblock %}
 
-{% block body %}
+{% block body %}    
 <div class="container" style="margin-top: 80px;">
    <div class="row">
         <div class="col-2" style="overflow-y: auto; height: 98vh;">
+            <h2 align="center" class="me-5">Различные действия</h2>
+            <button type="button" class="btn btn-outline-dark mb-2 ms-2" style="width: 70%;" onclick="checkAllResponses();">Проверить все</button>
+            {% if is_author %}
+                <a class="btn btn-danger ms-2 mt-3" href="{{variant.id}}/delete" style="width: 70%; text-decoration: none;">Удалить</a>
+            {% endif %}
         </div>
         <div class="col-sm-10" style="overflow-y: auto; height: 100vh;"> <!-- Добавляем прокрутку для правой колонки -->
             <h1 align="center" class="pt-2 pb-2">Задачи ЕГЭ</h1>
@@ -39,7 +44,7 @@
                         <div class="d-flex align-items-center">
                             <span class="fw-bold text-secondary me-1">Сложность:</span>
                             <span>
-                                {{task.difficulty}}
+                                {{difficulty_names[task.difficulty]}}
                             </span>
                         </div>
                     </div>
