Добавлены кнопки про курсы в header

--- a/templates/base.html
+++ b/templates/base.html
@@ -36,6 +36,8 @@
         <ul class="col-12 col-lg-auto me-lg-auto mb-2" style="display: flex; justify-content: center; align-items: center; margin-top: auto; margin-bottom: auto; height: 8vh;">
           <!-- <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li> -->
           <li style="margin-top: auto; margin-bottom: auto;"><a href="{{url_for('posts')}}" class="nav-link px-2 text-white be_centered" style="text-decoration: none; margin-top: auto; margin-bottom: auto;">Статьи</a></li>
+          <li style="margin-top: auto; margin-bottom: auto;"><a href="{{url_for('cources')}}" class="nav-link px-2 text-white be_centered" style="text-decoration: none; margin-top: auto; margin-bottom: auto;">Курсы</a></li>
+          <li style="margin-top: auto; margin-bottom: auto;"><a href="{{url_for('course_add')}}" class="nav-link px-2 text-white be_centered" style="text-decoration: none; margin-top: auto; margin-bottom: auto;">Добавить курс</a></li>
           <li style="margin-top: auto; margin-bottom: auto;"><a href="{{url_for('tasks')}}" class="nav-link px-2 text-white be_centered" style="text-decoration: none; margin-top: auto; margin-bottom: auto;">Задания</a></li>
           <li style="margin-top: auto; margin-bottom: auto;"><a href="{{url_for('pitches')}}" class="nav-link px-2 text-white be_centered" style="text-decoration: none; margin-top: auto; margin-bottom: auto;">Презентации</a></li>
           <li style="margin-top: auto; margin-bottom: auto;"><a href="{{url_for('variants')}}" class="nav-link px-2 text-white be_centered" style="text-decoration: none; margin-top: auto; margin-bottom: auto;">Варианты</a></li>
