fix visual bags

--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -167,10 +167,10 @@
             if (data.status === "success") {
                 if (userResponse.trim().toLowerCase() === taskAnswer.toLowerCase()) {
                     resultDiv.innerHTML = '<i class="bi bi-check-circle-fill text-success"></i> Верно!';
-                    inputField.style.backgroundColor = "#e6ffe6";
+                    inputField.style.backgroundColor = "lightgreen";
                 } else {
                     resultDiv.innerHTML = '<i class="bi bi-x-circle-fill text-danger"></i> Неверно!';
-                    inputField.style.backgroundColor = "#ffe6e6";
+                    inputField.style.backgroundColor = "lightcoral";
                 }
             }
         })
@@ -220,12 +220,10 @@
             .then(data => {
                 if (data.status === "success") {
                     if (userResponse.value.trim().toLowerCase() === taskAnswer.toLowerCase()) {
-                        resultDiv.innerText = "Ответ верный!";
-                        resultDiv.style.color = "green";
+                        resultDiv.innerHTML = '<i class="bi bi-check-circle-fill text-success"></i> Верно!';
                         userResponse.style.backgroundColor = "lightgreen";
                     } else {
-                        resultDiv.innerText = "Ответ неверный. Попробуйте еще раз.";
-                        resultDiv.style.color = "red";
+                        resultDiv.innerHTML = '<i class="bi bi-x-circle-fill text-danger"></i> Неверно!';
                         userResponse.style.backgroundColor = "lightcoral";
                     }
                 }
