Добавлена заглушка для групп

--- a/templates/teacher_courses.html
+++ b/templates/teacher_courses.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}
-Главная страница
+Группы
 {% endblock %}
 
 {% block script %}
@@ -33,7 +33,7 @@
 <body>
 
     <div class="container my-5">
-        <h1 class="text-center mb-4">Мои курсы</h1>
+        <h1 class="text-center mb-4">Мои группы</h1>
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
                 <div class="card h-100">
