--- a/templates/add_course.html
+++ b/templates/add_course.html
@@ -13,7 +13,7 @@
         <textarea name="description" id="description" class='form-control textareaElement'></textarea>
         
         <input type="file" name="file" id="file" class="form-control" style="width: 22%"><br>
-        <input id="send_post" type="submit" name="send_post" class="btn btn-success mb-3" value="Запостить статью"> 
+        <input id="send_post" type="submit" name="send_post" class="btn btn-success mb-3" value="Создать курс"> 
     </form>
 </div>
 {% endblock %}      
