--- a/templates/cources.html
+++ b/templates/cources.html
@@ -6,10 +6,14 @@
 
 {% block body %}
 <div class="container w-75 pt-5">
-    <h1 class="mt-2" align="center" style="font-size: 300%;">Cтатьи на сайте!</h1>
+    <h1 class="mt-2" align="center" style="font-size: 300%;">Курсы на сайте!</h1>
     {% if tables|length == 0 %}
-        <h1 align="center" style="font-size: 200%;">Пока нет статей</h1>
+        <h1 align="center" style="font-size: 200%;">Пока нет курсов</h1>
     {% endif %}
+    <div align="center" class="mb-4"><a class="btn btn-outline-dark" style="height: 7vh; font-size: 150%; text-decoration: none;" href="{{url_for('course_add')}}">
+            Создать курс
+        </a>
+    </div>  
     {% for table in tables %}
         <div class="alert alert-info">
             <h1 style="color: #000;">{{table.name}}<img align="right" height="12%" width="13%" src="static/img/avatars/{{table.avatar_name}}"></h1> 
